--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["Hilmar Wiegand <me@hwgnd.de>", "Amethyst Foundation <contact@amethys
 edition = "2018"
 
 [dependencies]
-amethyst = {version = "0.15.2", features = ["no-slow-safety-checks"]}
+amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
 log = { version = "0.4.8", features = ["serde"] }
+amethyst_window = {version = "0.15.3"}
+
 
 [features]
 default = ["vulkan"]
